@@ -6,7 +6,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import org.junit.Before;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -15,6 +16,7 @@ import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import com.ocr.safety.model.AllData;
 import com.ocr.safety.model.ChildAlert;
 import com.ocr.safety.model.ChildAlertPerson;
+import com.ocr.safety.model.CommunityEmail;
 import com.ocr.safety.model.CompletePerson;
 import com.ocr.safety.repository.DataTreatment;
 import com.ocr.safety.service.PersonService;
@@ -30,19 +32,22 @@ public class PersonServiceTest {
 	@Autowired
 	DataTreatment datatreatment;
 	
+	
+	private AllData allDataTest;
+	
     
     public static List<ChildAlertPerson> getCompletePersonListChild() {
     	
         return new ArrayList<>(Arrays.asList(
-                new ChildAlertPerson("Tenley", "Boyd", null,  8)));
+                new ChildAlertPerson("Tenley", "Boyd", "1509 Culver St",  9)));
         
     }
 
     public static List<ChildAlertPerson> getCompletePersonListAdult() {
     	
         return new ArrayList<>(Arrays.asList(
-                new ChildAlertPerson("John", "Boyd", null,  37),
-                new ChildAlertPerson("Jacob", "Boyd", null,32)));
+                new ChildAlertPerson("John", "Boyd", "1509 Culver St", 37),
+                new ChildAlertPerson("Jacob", "Boyd", "1509 Culver St", 32)));
         
     }
 
@@ -54,30 +59,35 @@ public class PersonServiceTest {
 
     public List<CompletePerson> getCompletePersonByNamesList() {
         return new ArrayList<>(Arrays.asList(
-                new CompletePerson("John", "Boyd", "1509 Culver St", "Culver", "97451", null, "jaboyd@email.com",  36, List.of("aznol:350mg", "hydrapermazol:100mg"), List.of("nillacilan"), 0),
+                new CompletePerson("John", "Boyd", "1509 Culver St", "Culver", "97451", "841-874-6512", "jaboyd@email.com",  37, List.of("aznol:350mg", "hydrapermazol:100mg"), List.of("nillacilan"), 0),
                 new CompletePerson("Jacob", "Boyd", "1509 Culver St", "Culver", "97451", null, "drk@email.com", 31, List.of("pharmacol:5000mg", "terazine:10mg", "noznazol:250mg"), List.of(), 0),
-                new CompletePerson("Tenley", "Boyd", "1509 Culver St", "Culver", "97451", null, "tenz@email.com", 8, List.of(), List.of("peanut"), 0),
+                new CompletePerson("Tenley", "Boyd", "1509 Culver St", "Culver", "97451", null, "tenz@email.com", 9, List.of(), List.of("peanut"), 0),
                 new CompletePerson("Roger", "Boyd", "29 15th St", "Culver", "97451", null, "jaboyd@email.com", 3, List.of(), List.of(), 0),
                 new CompletePerson("Felicia", "Boyd", "29 15th St", "Culver", "97451", null, "jaboyd@email.com", 34, List.of("tetracyclaz:650mg"), List.of("xilliathal"), 0)
         ));
     }
 
-    public static List<String> getEmailsFromCityList() {
+    public static CommunityEmail getEmailsFromCityList() {
     	
-        return new ArrayList<>(Arrays.asList("jaboyd@email.com", "drk@email.com",
+        return new CommunityEmail(List.of("jaboyd@email.com", "drk@email.com",
         		"tenz@email.com", "jaboyd@email.com", "jaboyd@email.com"));
         
     }
     
-    @Before
+    @BeforeEach
 	public void setup() {
     	
-		AllData allDataTest = new AllData(DataForTest.PersonList(), DataForTest.MedicalRecordList()
+		 allDataTest = new AllData(DataForTest.PersonList(), DataForTest.MedicalRecordList()
 				, DataForTest.FirestationList());
 		
          datatreatment.setAlldata(allDataTest);
          
 	}
+    
+    @AfterEach
+    public void setupEachTest() {
+    	
+    }
     
     @Test
     public void savePersonTest() {
@@ -89,28 +99,28 @@ public class PersonServiceTest {
     @Test
     public void updatePersonTest() {
     	
-    	assertEquals(personService.updatePerson(DataForTest.getPersonToUpdateTest()), DataForTest.getPersonToUpdateTest());
+    	assertEquals(DataForTest.getPersonToUpdateTest(), personService.updatePerson(DataForTest.getPersonToUpdateTest()));
     	
     }
     
     @Test
     public void deletePersonTest() {
     	
-    	assertEquals(personService.deletePerson(DataForTest.getPersonToDeleteTest()), DataForTest.getPersonToDeleteTest());
+    	assertEquals(true, personService.deletePerson(DataForTest.getPersonToDeleteTest()));
     	
     }
     
     @Test
     public void giveChildAlertByAddressTest() {
     	
-    	assertEquals(personService.giveChildAlertByAddress("1509 Culver St"), getChildAlertTest());
+    	assertEquals( getChildAlertTest(), personService.giveChildAlertByAddress("1509 Culver St"));
     	
     }
     
     @Test
     public void getCommunityEmailPersonsByCityTest() {
     	
-    	assertEquals(personService.getCommunityEmailPersonsByCity("Culver"), getEmailsFromCityList());
+    	assertEquals(getEmailsFromCityList(), personService.getCommunityEmailPersonsByCity("Culver"));
     	
     }
     
@@ -118,7 +128,7 @@ public class PersonServiceTest {
     @Test
     public void getCompletePersonsByNameTest() {
     	
-    	assertEquals(personService.getCompletePersonsByName("John", "Boyd"), getCompletePersonByNamesList());
+    	assertEquals( List.of(getCompletePersonByNamesList().get(0)), personService.getCompletePersonsByName("John", "Boyd"));
     	
     }
     
